--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/List.razor
@@ -47,6 +47,11 @@
                                     <span>Config模板</span>
                                 </div>
                             </th>
+                            <th data-field="Type" data-key="14-0-5">
+                                <div class="layui-table-cell laytable-cell-14-0-5">
+                                    <span>操作</span>
+                                </div>
+                            </th>
                         </tr>
                         </thead>
                     </table>
@@ -104,6 +109,11 @@
                                                 <option value="@yamlTplVO.Id">@yamlTplVO.Name</option>
                                             }
                                         </select>
+                                    </div>
+                                </td>
+                                <td data-field="Title" data-key="14-0-6">
+                                    <div class="laytable-cell-14-0-6">
+                                        <button class="layui-btn">发布</button>
                                     </div>
                                 </td>
                             </tr>
