--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/deploy/Update.razor
@@ -19,8 +19,8 @@
     <div class="layui-card-body" style="padding: 15px;">
         <div class="layui-form-item">
             <label class="layui-form-label">ID</label>
-            <div class="layui-input-block">
-                @_info.Id
+            <div class="layui-input-inline">
+                <label class="layui-form-label" style="text-align: left">@_info.Id</label>
             </div>
         </div>
         <div class="layui-form-item">
