完成集群页面

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -53,7 +53,7 @@
                 </a>
                 <dl class="layui-nav-child">
                     <dd>
-                        <NavLink href="template/personalpage.html">集群管理</NavLink>
+                        <NavLink href="/k8s/cluster/list">集群管理</NavLink>
                     </dd>
                     <dd>
                         <NavLink href="/k8s/tpl/list">yaml模板</NavLink>
