--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/git/Add.razor
@@ -64,7 +64,7 @@
             }
             await _iocManager.Resolve<IGitService>().AddAsync(_info);
             await js.InvokeVoidAsync("alert", "添加成功");
-            nav.NavigateTo($"/git/update/{_info.Id}");
+            nav.NavigateTo("/git/list");
         }
         catch (Exception e)
         {
