--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Add.razor
@@ -72,7 +72,7 @@
                 
             await _iocManager.Resolve<IProjectService>().AddAsync(_info);
             await js.InvokeVoidAsync("alert", "添加成功");
-            nav.NavigateTo($"/project/update/{_info.Id}");
+            nav.NavigateTo("/project/list");
         }
         catch (Exception e)
         {
