--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/tpl/Add.razor
@@ -66,7 +66,7 @@
                 
             await _iocManager.Resolve<IYamlTplService>().AddAsync(_info);
             await js.InvokeVoidAsync("alert", "添加成功");
-            nav.NavigateTo($"/k8s/tpl/update/{_info.Id}");
+            nav.NavigateTo("/k8s/tpl/list");
         }
         catch (Exception e)
         {
