--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -56,10 +56,13 @@
                         <NavLink href="/k8s/cluster/list">集群管理</NavLink>
                     </dd>
                     <dd>
-                        <NavLink href="/k8s/tpl/list">yaml模板</NavLink>
+                        <NavLink href="/k8s/tpl/list">模板管理</NavLink>
                     </dd>
                     <dd>
-                        <NavLink href="/k8s/deploy/list">发布yaml</NavLink>
+                        <NavLink href="/k8s/deploy/list">模板发布</NavLink>
+                    </dd>
+                    <dd>
+                        <NavLink href="/k8s/single/deploy">Single发布</NavLink>
                     </dd>
                 </dl>
             </li>
