--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -73,7 +73,7 @@
                 </a>
                 <dl class="layui-nav-child">
                     <dd data-name="content">
-                        <NavLink href="javascript:;">发布</NavLink>
+                        <NavLink href="/deploy/build/list">立即构建</NavLink>
                     </dd>
                 </dl>
             </li>
