--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/HeadMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/HeadMenu.razor
@@ -6,12 +6,12 @@
             </a>
         </li>
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <a href="http://www.layui.com/admin/" target="_blank" title="前台">
+            <a href="https://github.com/FarseerNet/FOPS" target="_blank" title="前台">
                 <i class="layui-icon layui-icon-website"></i>
             </a>
         </li>
         <li class="layui-nav-item" lay-unselect>
-            <a href="javascript:;" layadmin-event="refresh" title="刷新">
+            <a href="javascript:location.reload();" layadmin-event="refresh" title="刷新">
                 <i class="layui-icon layui-icon-refresh-3"></i>
             </a>
         </li>
