添加项目组逻辑

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -100,6 +100,9 @@
                 </a>
                 <dl class="layui-nav-child">
                     <dd>
+                        <NavLink href="/project_group/list">项目组设置</NavLink>
+                    </dd>
+                    <dd>
                         <NavLink href="/project/list">项目设置</NavLink>
                     </dd>
                     <dd>
