--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Add.razor
@@ -1,10 +1,8 @@
-@page "/k8s/cluster/update/{id:int}"
+@page "/cluster/add"
 @using Microsoft.AspNetCore.Components
 @using FOPS.Abstract.K8S.Entity
-@using FOPS.Abstract.K8S.Enum
 @using FOPS.Abstract.K8S.Server
 @using FOPS.Abstract.MetaInfo.Enum
-@using FS.Extends
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
@@ -17,12 +15,6 @@
         </div>
     </div>
     <div class="layui-card-body" style="padding: 15px;">
-        <div class="layui-form-item">
-            <label class="layui-form-label">ID</label>
-            <div class="layui-input-inline">
-                <label class="layui-form-label" style="text-align: left">@_info.Id</label>
-            </div>
-        </div>
         <div class="layui-form-item">
             <label class="layui-form-label">集群名称</label>
             <div class="layui-input-inline">
@@ -44,14 +36,14 @@
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">kubectl地址</label>
-            <div class="layui-input-block">
+            <div class="layui-input-inline">
                 <input type="text" @bind="_info.ConfigName" autocomplete="off" placeholder="请输入kubectl配置地址" class="layui-input" style="width:700px;">
             </div>
         </div>
         <div class="layui-form-item layui-layout-admin">
             <div class="layui-input-block">
                 <div class="layui-footer" style="left: 0;">
-                    <button class="layui-btn" @onclick="UpdateInfo">保存</button>
+                    <button class="layui-btn" @onclick="AddInfo">添加</button>
                 </div>
             </div>
         </div>
@@ -62,24 +54,23 @@
     width: 120px;
 }
 </style>
+
 @code{
 
-    [Parameter] public int Id { get; set; }
+    private readonly ClusterVO _info = new() {};
 
-    private ClusterVO _info = new() {};
-
-    private async Task UpdateInfo()
+    private async Task AddInfo()
     {
-        if (Id < 1 || _info == null)
-        {
-            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
-            nav.NavigateTo($"/k8s/cluster/list");
-        }
         try
         {
-            await _iocManager.Resolve<IClusterService>().UpdateAsync(Id, _info);
-            await js.InvokeVoidAsync("alert", "修改成功");
-            nav.NavigateTo($"/k8s/cluster/update/{_info.Id}");
+            if (_info.Name == null)
+            {
+                throw new Exception("Yaml模板名称。");
+            }
+
+            await _iocManager.Resolve<IClusterService>().AddAsync(_info);
+            await js.InvokeVoidAsync("alert", "添加成功");
+            nav.NavigateTo("/cluster/list");
         }
         catch (Exception e)
         {
@@ -87,31 +78,9 @@
         }
     }
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (Id < 1 || _info == null)
-        {
-            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
-            nav.NavigateTo($"/k8s/cluster/list");
-        }
-    }
-
-    protected override async Task OnParametersSetAsync()
-    {
-        if (Id > 0 && _info.Id == 0)
-        {
-            _info = await _iocManager.Resolve<IClusterService>().ToInfoAsync(Id);
-            if (_info == null)
-            {
-                await js.InvokeVoidAsync("alert", "Yaml模板不存在");
-                nav.NavigateTo($"/k8s/cluster/list");
-            }
-        }
-    }
-
     private void GotoList()
     {
-        nav.NavigateTo("/k8s/cluster/list");
+        nav.NavigateTo("/cluster/list");
     }
 
 }
