--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/List.razor
@@ -1,4 +1,4 @@
-@page "/k8s/cluster/list"
+@page "/cluster/list"
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.K8S.Server
 @inject IIocManager _iocManager;
@@ -59,7 +59,7 @@
                                 </td>
                                 <td data-field="Title" data-key="14-0-2" class="">
                                     <div class="layui-table-cell laytable-cell-14-0-2">
-                                        <a href="/k8s/cluster/update/@info.Id">@info.Name</a>
+                                        <a href="/cluster/update/@info.Id">@info.Name</a>
                                     </div>
                                 </td>
                                 <td data-field="Type" data-key="14-0-3" class="">
@@ -73,7 +73,7 @@
                     </table>
                 </div>
             </div>
-            <PageSplit PageIndex="1" PageSize="@_pageSize" TotalCount="@_totalCount" PageUrl="/k8s/cluster/list/{index}"></PageSplit>
+            <PageSplit PageIndex="1" PageSize="@_pageSize" TotalCount="@_totalCount" PageUrl="/cluster/list/{index}"></PageSplit>
         </div>
     </div>
 </div>
@@ -100,6 +100,6 @@
 
     private void GotoAdd()
     {
-        nav.NavigateTo("/k8s/cluster/add");
+        nav.NavigateTo("/cluster/add");
     }
 }
