--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Update.razor
@@ -1,4 +1,4 @@
-@page "/k8s/cluster/add"
+@page "/cluster/update/{id:int}"
 @using Microsoft.AspNetCore.Components
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.K8S.Server
@@ -15,6 +15,12 @@
         </div>
     </div>
     <div class="layui-card-body" style="padding: 15px;">
+        <div class="layui-form-item">
+            <label class="layui-form-label">ID</label>
+            <div class="layui-input-inline">
+                <label class="layui-form-label" style="text-align: left">@_info.Id</label>
+            </div>
+        </div>
         <div class="layui-form-item">
             <label class="layui-form-label">集群名称</label>
             <div class="layui-input-inline">
@@ -36,14 +42,14 @@
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">kubectl地址</label>
-            <div class="layui-input-inline">
+            <div class="layui-input-block">
                 <input type="text" @bind="_info.ConfigName" autocomplete="off" placeholder="请输入kubectl配置地址" class="layui-input" style="width:700px;">
             </div>
         </div>
         <div class="layui-form-item layui-layout-admin">
             <div class="layui-input-block">
                 <div class="layui-footer" style="left: 0;">
-                    <button class="layui-btn" @onclick="AddInfo">添加</button>
+                    <button class="layui-btn" @onclick="UpdateInfo">保存</button>
                 </div>
             </div>
         </div>
@@ -54,23 +60,24 @@
     width: 120px;
 }
 </style>
-
 @code{
 
-    private readonly ClusterVO _info = new() {};
+    [Parameter] public int Id { get; set; }
 
-    private async Task AddInfo()
+    private ClusterVO _info = new() {};
+
+    private async Task UpdateInfo()
     {
+        if (Id < 1 || _info == null)
+        {
+            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+            nav.NavigateTo($"/cluster/list");
+        }
         try
         {
-            if (_info.Name == null)
-            {
-                throw new Exception("Yaml模板名称。");
-            }
-
-            await _iocManager.Resolve<IClusterService>().AddAsync(_info);
-            await js.InvokeVoidAsync("alert", "添加成功");
-            nav.NavigateTo("/k8s/cluster/list");
+            await _iocManager.Resolve<IClusterService>().UpdateAsync(Id, _info);
+            await js.InvokeVoidAsync("alert", "修改成功");
+            nav.NavigateTo($"/cluster/update/{_info.Id}");
         }
         catch (Exception e)
         {
@@ -78,9 +85,31 @@
         }
     }
 
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (Id < 1 || _info == null)
+        {
+            await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+            nav.NavigateTo($"/cluster/list");
+        }
+    }
+
+    protected override async Task OnParametersSetAsync()
+    {
+        if (Id > 0 && _info.Id == 0)
+        {
+            _info = await _iocManager.Resolve<IClusterService>().ToInfoAsync(Id);
+            if (_info == null)
+            {
+                await js.InvokeVoidAsync("alert", "Yaml模板不存在");
+                nav.NavigateTo($"/cluster/list");
+            }
+        }
+    }
+
     private void GotoList()
     {
-        nav.NavigateTo("/k8s/cluster/list");
+        nav.NavigateTo("/cluster/list");
     }
 
 }
