--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/List.razor
@@ -25,6 +25,11 @@
                             </th>
                             <th data-field="Type" data-key="14-0-1">
                                 <div class="layui-table-cell laytable-cell-14-0-1">
+                                    <span>项目组</span>
+                                </div>
+                            </th>
+                            <th data-field="Type" data-key="14-0-1">
+                                <div class="layui-table-cell laytable-cell-14-0-1">
                                     <span>项目名称</span>
                                 </div>
                             </th>
@@ -51,6 +56,11 @@
                             <tr data-index="@index">
                                 <td>
                                     <div class="layui-table-cell laytable-cell-14-0-0"> @info.Id</div>
+                                </td>
+                                <td data-field="Type" data-key="14-0-1">
+                                    <div class="layui-table-cell laytable-cell-14-0-1">
+                                        @_lstGroup.Find(o=>o.Id==info.GroupId)?.Name
+                                    </div>
                                 </td>
                                 <td data-field="Type" data-key="14-0-1">
                                     <div class="layui-table-cell laytable-cell-14-0-1">
@@ -91,9 +101,11 @@
 
     private List<ProjectVO> _lst = new();
     private List<GitVO> _lstGit = new();
-
+    private List<ProjectGroupVO> _lstGroup = new();
+    
     protected override async Task OnParametersSetAsync()
     {
+        _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync();
         _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync();
         _lst = await _iocManager.Resolve<IProjectService>().ToListAsync();
         _lst = _lst.OrderByDescending(o => o.Id).ToList();
