--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/project/Update.razor
@@ -20,6 +20,17 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">项目组</label>
+            <div class="layui-input-block">
+                <select @bind="_info.GroupId">
+                    @foreach (var gitVO in _lstGroup)
+                    {
+                        <option value="@gitVO.Id">@gitVO.Name</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label">项目名称</label>
             <div class="layui-input-block">
                 <input type="text" @bind="_info.Name" autocomplete="off" placeholder="请输入项目名称" class="layui-input">
@@ -60,7 +71,8 @@
 
     private ProjectVO _info = new() {};
     private List<GitVO> _lstGit = new();
-
+    private List<ProjectGroupVO> _lstGroup = new();
+    
     private async Task UpdateInfo()
     {
         if (Id < 1 || _info == null)
@@ -70,9 +82,14 @@
         }
         try
         {
-            if (string.IsNullOrWhiteSpace(_info.Path)) _info.Path = "/";
-            else if (!_info.Path.StartsWith('/'))_info.Path = "/" + _info.Path;
+            if (_info.Name == null || _info.GitId == 0 || _info.GroupId == 0)
+            {
+                throw new Exception("项目组、项目名称、托管地址必须填写。");
+            }
             
+            if (string.IsNullOrWhiteSpace(_info.Path)) _info.Path = "/";
+            else if (!_info.Path.StartsWith('/')) _info.Path = "/" + _info.Path;
+
             await _iocManager.Resolve<IProjectService>().UpdateAsync(Id, _info);
             await js.InvokeVoidAsync("alert", "修改成功");
             nav.NavigateTo($"/project/update/{_info.Id}");
@@ -103,12 +120,11 @@
                 nav.NavigateTo($"/project/list");
             }
             _lstGit = await _iocManager.Resolve<IGitService>().ToListAsync();
+            _lstGroup = await _iocManager.Resolve<IProjectGroupService>().ToListAsync();
         }
     }
-
     private void GotoList()
     {
         nav.NavigateTo("/project/list");
     }
-
 }
