--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -53,9 +53,6 @@
                 </a>
                 <dl class="layui-nav-child">
                     <dd>
-                        <NavLink href="/k8s/cluster/list">集群管理</NavLink>
-                    </dd>
-                    <dd>
                         <NavLink href="/k8s/tpl/list">模板管理</NavLink>
                     </dd>
                     <dd>
@@ -99,6 +96,9 @@
                     <cite>设置</cite>
                 </a>
                 <dl class="layui-nav-child">
+                    <dd>
+                        <NavLink href="/cluster/list">集群管理</NavLink>
+                    </dd>
                     <dd>
                         <NavLink href="/project_group/list">项目组设置</NavLink>
                     </dd>
