--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/List.razor
@@ -1,6 +1,7 @@
 @page "/cluster/list"
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.K8S.Server
+@using FOPS.Abstract.MetaInfo.Server
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 
