--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/cluster/Update.razor
@@ -3,6 +3,7 @@
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.K8S.Server
 @using FOPS.Abstract.MetaInfo.Enum
+@using FOPS.Abstract.MetaInfo.Server
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
