--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/single/Deploy.razor
@@ -1,6 +1,7 @@
 @page "/k8s/single/deploy"
 @using FOPS.Abstract.K8S.Entity
 @using FOPS.Abstract.K8S.Server
+@using FOPS.Abstract.MetaInfo.Server
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
